--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@ngrx/store": "^15.2.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
