--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "json-server": "^0.17.0",
+    "ngx-toastr": "^16.0.2",
     "rxjs": "<7.0.0",
     "zone.js": "~0.11.4"
   },
