--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -24,6 +24,6 @@ jobs:
       with:
         node-version: '18.x'
     - name: Install dependencies
-      run: npm ci
-    - run: npm run build
-    - run: npm run test
+      run: yarn
+    - run: yarn build
+    - run: yarn test
