--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -29,6 +29,7 @@ jobs:
         node-version: '18.x'
     - name: Install dependencies
       run: yarn
+    - run: yarn build
     - run: |
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
