--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --open",
     "build": "ng build",
     "test": "set NODE_OPTIONS=--openssl-legacy-provider && ng test",
+    "test:ci": "ng test --browsers=ChromeHeadless --progress=false --watch=false --code-coverage --source-map=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "server": "json-server --watch ./server/database.json"
