--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -34,8 +34,5 @@ jobs:
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
-        yarn test
-        env:
-          CI: true
-    - name: Show Output
-      run: echo "finished test"
+        yarn test:ci
+        
