--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -30,9 +30,5 @@ jobs:
     - name: Install dependencies
       run: yarn
     - run: yarn build
-    - run: |
-        export DISPLAY=:99
-        chromedriver --url-base=/wd/hub &
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
-        yarn test:ci
+    - run: yarn test:ci
         
