--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -12,6 +12,7 @@ env:
   REGION: us-central1 # TODO: update Cloud Run service region
   GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
   SA_EMAIL: ${{ secrets.SA_EMAIL }}
+  API_KEY: ${{ secrets.API_KEY }}
 
 jobs:
   deploy:
