--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
     "test": "set NODE_OPTIONS=--openssl-legacy-provider && ng test",
     "test:ci": "ng test --browsers=ChromeHeadless --progress=false --watch=false --source-map=false",
     "lint": "ng lint",
